--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,7 @@ services:
 
   postgres:
     image: postgres:latest
+    container_name: nocobase-db
     command: postgres -c wal_level=logical
     ports:
       - "5432:5432"
